--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -3,6 +3,8 @@ $movieColor: #ef4f00;
 $educationalColor: #22c100;
 $musicColor: #006ae2;
 $adultColor: #c500d4;
+@import "functions";
+
 html, body {
   height: 100%;
 }
@@ -70,7 +72,7 @@ div#root {
       pointer-events: none;
       color: #828282;
       padding-bottom: 6px;
-      transition: all 700ms;
+      @include Transition(all,700ms);
     }
 
     div.label {
@@ -122,9 +124,7 @@ div#root {
       stroke-width: 0.8;
       stroke-dasharray: 800;
       stroke-dashoffset: 800;
-      -moz-animation: logoFill 4s ease-in-out 1s forwards;
-      -webkit-animation: logoFill 4s ease-in-out 1s forwards;
-      animation: logoFill 4s ease-in-out 1s forwards;
+     @include Animation(logoFill,4s,ease-in-out,1s,forwards);
     }
   }
 }
@@ -266,7 +266,7 @@ div#root {
     flex-direction: row;
     align-content: center;
     align-items: center;
-    border-radius: 3px;
+    @include borderRadius(3px);
     margin-right: 5px;
     cursor: pointer;
     pointer-events: auto;
@@ -301,9 +301,7 @@ div#root {
   div[class^="ct-"][class$="-checked"] {
     color: #fff;
     background: #000;
-    -webkit-animation: jello-horizontal 0.5s linear;
-    animation: jello-horizontal 0.5s linear;
-    animation-fill-mode: forwards;
+    @include Animation(jello-horizontal,0.5s,linear, 1);
   }
 
   div[class^="ct-"][class$="-unchecked"] {
@@ -317,7 +315,7 @@ div#root {
   width: 100%;
   height: 50px;
   border: 1px solid #dfe1e5;
-  border-radius: 30px;
+  @include borderRadius(30px);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -327,12 +325,11 @@ div#root {
   align-self: center;
 
   &:hover {
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+    @include boxShadow(0,-2px,5px,rgba(0, 0, 0, 0.2));
   }
 
   &:focus-within {
-    box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.2);
-
+    @include boxShadow(0px,-1px,8px,rgba(0, 0, 0, 0.2));
   }
 
   .search-query {
@@ -345,14 +342,15 @@ div#root {
     flex-basis: auto;
     align-self: auto;
     order: 0;
-    border-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
     z-index: 3;
     height: 100%;
-
     &:focus {
       border: none;
       outline: none;
     }
+
 
   }
 
@@ -373,15 +371,15 @@ div#root {
     order: 0;
     width: 100%;
     z-index: 2;
-    box-shadow: 0 7px 8px rgba(0, 0, 0, 0.2);
+    @include boxShadow();
 
     .suggestion-option {
       cursor: pointer;
       outline: none;
       display: inline-flex;
       width: 100%;
-      border-radius: 2px;
-      transition-duration: .3s;
+      @include borderRadius(30px);
+      @include Transition(all,0.3s);
       min-height: 20px;
 
       &:first-child {
@@ -404,16 +402,25 @@ div#root {
   }
 
   .magnify {
-    color: #b2b2b2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    cursor: pointer;
+    align-self: center;
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: 48px;
-    align-self: center;
     order: 0;
-
+    display: flex;
+    justify-content: center;
+  .hsuHs{
+    margin: auto;
+    color: #9aa0a6;
+    padding: 0 10px 0;
+    .wFncld {
+      margin-top: 6px;
+      color: #9aa0a6;
+      height: 20px;
+      width: 20px
+    }
+  }
   }
 
   .suggestion-magnify {
@@ -436,7 +443,7 @@ div#root {
 
   .loader {
     border: 16px solid #ffffff;
-    border-radius: 50%;
+    @include borderRadius(50%);
     border-top: 16px solid #928f8f;
     border-bottom: 16px solid #928f8f;
     width: 15%;
@@ -623,75 +630,4 @@ div#root {
     fill: #000000;
   }
 }
-
-/* Responsive Design */
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .screen-logo-loaded {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .search-container {
-
-    width: 100%;
-    padding-top: 30%;
-
-    .screen-logo {
-      width: 70%;
-    }
-
-    .filtering-type {
-      font-size: 8px;
-    }
-  }
-  .search-container-loaded {
-    .search-box-container {
-      width: 100%;
-    }
-  }
-  .list-videos {
-    display: flex;
-    flex-direction: column-reverse;
-
-    .filtering-type-loaded {
-      position: sticky;
-      display: flex;
-      flex-direction: row;
-      padding-right: 0;
-      z-index: 22;
-      left: 0;
-      bottom: 0;
-      background: #fff;
-      height: 60px;
-      align-items: center;
-
-      div.label {
-        display: none;
-      }
-
-      div[class^="ct-"] {
-        width: 100%;
-        margin: 1px
-      }
-    }
-  }
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-}
+@import "media_queries";
