--- a/src/assets/css/single_music.scss
+++ b/src/assets/css/single_music.scss
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   align-self: center;
-  //align-items: center;
+  padding: 10px;
+  border:1px solid #ccc;
+  border-bottom: 0;
   .sm-song {
     display: flex;
     flex: 1;
@@ -11,46 +13,50 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-
     .sm-thumbnail {
-      cursor: pointer;
-      background-repeat: no-repeat;
-      background-size: cover;
       position: relative;
-      padding: 10px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      flex-basis: 4%;
-
-      .sm-thumbnail-image {
-        display: block;
-        height: 100%;
-        width: 100%;
+      cursor: pointer;
+      display: inline-block;
+      margin: 0 10px;
+      text-align: center;
+      .icon-play3,.icon-pause2{
         border-radius: 50%;
-        object-fit: cover;
+        box-shadow: inset 0 0 0 2px #ffb088;
+        color: #444;
+        height: 40px;
+        line-height: 40px;
+        width: 40px;
+        font-size: 24px;
       }
-
-      div[class^="icon-"] {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #fff;
-        pointer-events: none;
-        -webkit-font-smoothing: antialiased;
-        font-size: 32px;
+      .icon-pause2{
+        font-size: 20px;
       }
     }
-
+.sm-thumbnail-loaded{
+  -webkit-animation: bubble_out .7s ease-in-out infinite both;
+  animation: bubble_out .7s ease-in-out infinite both;
+  border-color: rebeccapurple;
+}
     .sm-details {
       display: flex;
+      position: relative;
       flex: 1;
       flex-direction: row;
       flex-wrap: nowrap;
-      justify-content: space-around;
       align-items: center;
-
+      .sm-right{
+        right: 0;
+        justify-content: flex-end;
+        position: absolute;
+        padding-right: 26px;
+        display: flex;
+        .sm-duration{
+          padding-right: 50px;
+        }
+      }
+      .sm-title{
+        width: calc(100% - 150px);
+      }
       .sm-name {
 
       }
@@ -70,13 +76,12 @@
   border-radius: 8px 8px 0 0 ;
   }
   &:nth-child(2n+1) {
-    background-color: #e9f1f9;
+    background-color: #fafafa;
   }
 }
 
 .sm-player {
   box-shadow: 0 1px 9px #b4b4b4;
-
   display: flex;
   flex-direction: row;
   position: sticky;
@@ -174,4 +179,27 @@
   right: 0;
   position: relative;
 
+}
+@-webkit-keyframes bubble_out {
+  0%,
+  to {
+    -webkit-transform: scale(.88);
+    transform: scale(.88)
+  }
+  50% {
+    -webkit-transform: scale(1);
+    transform: scale(1)
+  }
+}
+
+@keyframes bubble_out {
+  0%,
+  to {
+    -webkit-transform: scale(.88);
+    transform: scale(.88)
+  }
+  50% {
+    -webkit-transform: scale(1);
+    transform: scale(1)
+  }
 }
