--- a/src/assets/css/single_video.scss
+++ b/src/assets/css/single_video.scss
@@ -61,6 +61,14 @@
   padding: 0.5vh;
 }
 
+.sv-thumbnail-youtube {
+  position: relative;
+  margin-right: 16px;
+  max-width: 360px;
+  min-width: 240px;
+  flex-basis: 1e-9px;
+}
+
 .sv-thumbnail {
   position: relative;
   height: 30vh;
@@ -80,10 +88,26 @@
 .sv-detail {
   display: flex;
   flex-direction: column;
-  margin-left: 2vh;
   width: 70%;
   padding-right: 10px;
   justify-content: center;
+}
+
+.sv-title-youtube {
+  text-decoration: none;
+
+  color: #030303;
+  -webkit-line-clamp: 2;
+  display: block;
+  max-height: calc(2 * 2.4rem);
+  overflow: hidden;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.4rem;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  white-space: normal;
+  display: -webkit-box;
 }
 
 .sv-title {
@@ -369,21 +393,26 @@
       animation: roadRunnerIn 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
     }
   }
+
   &.close {
     transform: scale(1);
     animation: quickScaleDown 0s 0.5s linear forwards;
+
     .sv-modal-overlay {
       animation: fadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+
       .sv-modal-container {
         animation: roadRunnerOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
       }
     }
   }
+
   .sv-modal-overlay {
     display: table-cell;
     background: rgba(0, 0, 0, 0.8);
     text-align: center;
     vertical-align: middle;
+
     .sv-modal-container {
       width: 50%;
       display: flex;
@@ -404,14 +433,17 @@
       -webkit-box-shadow: 0 0 10px #000; // Safari/Chrome/WebKit
     }
   }
+
   .sv-modal-head {
     width: 100%;
+
     h3 {
       text-align: left;
       border-left: 2px solid #c6c6c6;
       padding: 0 0 0 2%;
       margin: 2%;
     }
+
     .sv-modal-close-button {
       background: #606061;
       color: #FFFFFF;
@@ -436,12 +468,14 @@
       -moz-transition-delay: .2s;
       -o-transition-delay: .2s;
       transition-delay: .2s;
+
       &:hover {
         background: #007bff;
         -moz-transition: all .5s ease-out;
         -webkit-transition: all .5s ease-out;
         -o-transition: all .5s ease-out;
       }
+
       cursor: pointer;
     }
   }
@@ -452,10 +486,12 @@
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
+
     &-body {
       width: 100%;
       font-size: 3vh;
       background: transparent;
+
       .sv-modal-box {
         width: 100%;
         position: relative;
@@ -466,14 +502,17 @@
         flex-direction: column;
         flex-wrap: nowrap;
         justify-content: flex-start;
+
         .sv-modal-qualities {
           border-radius: 0;
           overflow: hidden;
           width: 100%;
-          .sv-modal-quality{
+
+          .sv-modal-quality {
             width: 100%;
             color: white;
             overflow: hidden;
+
             &-label {
               box-shadow: 2px 2px 2px #ccc;
               transition: all 200ms;
@@ -488,6 +527,7 @@
               &:hover {
                 background-color: rgba(0, 0, 0, 0.1);
               }
+
               &::after {
                 content: "\276F";
                 width: 1em;
@@ -496,6 +536,7 @@
                 transition: all .35s;
               }
             }
+
             &-content {
               max-height: 0;
               padding: 0 1em;
@@ -503,6 +544,7 @@
               background: white;
               transition: all .35s;
             }
+
             &-close {
               display: flex;
               justify-content: flex-end;
@@ -510,26 +552,33 @@
               font-size: 0.75em;
               background: #fff;
               cursor: pointer;
+
               &:hover {
                 background: #fff;
               }
             }
+
             &.active {
               .sv-modal-quality-content {
-                max-height: 100vh;
+                max-height: 300px;
                 width: 100%;
+                overflow-y: scroll;
                 padding: 1em;
               }
+
               .sv-modal-quality-content div {
                 line-height: 3vh;
                 cursor: pointer;
               }
+
               .sv-modal-quality-content div.url-link:hover {
                 text-decoration: underline;
               }
+
               .sv-modal-quality-content div.url-section:hover {
                 text-decoration: underline;
               }
+
               .sv-modal-quality-label::after {
                 transform: rotate(90deg);
                 -webkit-transform: rotate(90deg);
@@ -538,6 +587,7 @@
               }
             }
           }
+
           .sv-modal-quality.active {
             background-color: rgba(0, 0, 0, 0.1);
           }
