--- a/src/assets/css/single_music.scss
+++ b/src/assets/css/single_music.scss
@@ -13,13 +13,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    .sm-thumbnail {
+    .sm-thumbnail, .sm-thumbnail-loaded {
       position: relative;
       cursor: pointer;
       display: inline-block;
       margin: 0 10px;
       text-align: center;
-      .icon-play3,.icon-pause2{
+      .icon-play3, .icon-pause2{
         border-radius: 50%;
         box-shadow: inset 0 0 0 2px #ffb088;
         color: #444;
@@ -27,6 +27,7 @@
         line-height: 40px;
         width: 40px;
         font-size: 24px;
+        cursor: pointer;
       }
       .icon-pause2{
         font-size: 20px;
@@ -66,8 +67,14 @@
       }
 
       .sm-download-links {
+        cursor: pointer;
         -webkit-font-smoothing: antialiased;
         font-size: 32px;
+        transition: all 700ms;
+        &:hover{
+          color: #ff7940;
+          transform: scale(1.2);
+        }
       }
     }
   }
@@ -99,14 +106,17 @@
 
 .sm-player-controls {
   padding-left: 20px;
-
   margin: auto 0;
-}
+  .icon-play3,.icon-pause2{
+    cursor: pointer;
+    font-size: 24px;
+    -webkit-font-smoothing: antialiased;
 
+  }
+}
 .sm-player-elapsed {
   padding-left: 10px;
   padding-right: 10px;
-
   margin: auto 0;
 
 }
@@ -119,7 +129,8 @@
   width: 100%;
   height: 100%;
   outline: none;
-  opacity: 0.7;
+  opacity: 1;
+  background: transparent;
   -webkit-transition: .2s;
   transition: opacity .2s;
 
@@ -128,7 +139,7 @@
     appearance: none;
     width: 16px;
     height: 16px;
-    background: #000;
+    background: #ff7940;
     cursor: pointer;
     border-radius: 8px;
   }
@@ -138,7 +149,7 @@
     appearance: none;
     width: 16px;
     height: 16px;
-    background: #000;
+    background: #ff7940;
     cursor: pointer;
     border-radius: 8px;
   }
