--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -25,44 +25,8 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-checkbox-checked:before {
-    content: "\e90a";
-}
-.icon-adult:before {
-    content: "\e908";
-}
-.icon-education:before {
-    content: "\e909";
-}
-.icon-software:before {
-    content: "\e907";
-}
-.icon-star-fill:before {
-    content: "\e900";
-}
-.icon-star1-outline:before {
-    content: "\e901";
-}
-.icon-mp4-fill:before {
-    content: "\e902";
-}
-.icon-mp4-outline:before {
-    content: "\e903";
-}
-.icon-mp3-fill:before {
-    content: "\e904";
-}
-.icon-mp3-outline:before {
-    content: "\e905";
-}
-.icon-download:before {
-    content: "\e90b";
-}
-.icon-download2:before {
-    content: "\e90c";
-}
-.icon-movie:before {
-    content: "\e906";
+.icon-heart:before {
+    content: "\e90e";
 }
 .icon-music:before {
     content: "\e911";
@@ -90,7 +54,6 @@
 }
 .icon-play3:before {
     content: "\ea1c";
-    margin-left: 3px;
 }
 .icon-pause2:before {
     content: "\ea1d";
@@ -143,6 +106,48 @@
 .icon-checkbox-unchecked:before {
     content: "\ea53";
 }
+.icon-share:before {
+    content: "\ea82";
+}
 .icon-youtube:before {
     content: "\ea9d";
+}
+.icon-heart-outline:before {
+    content: "\e90d";
+}
+.icon-download:before {
+    content: "\e90b";
+}
+.icon-star-fill:before {
+    content: "\e900";
+}
+.icon-star1-outline:before {
+    content: "\e901";
+}
+.icon-mp4-fill:before {
+    content: "\e902";
+}
+.icon-mp4-outline:before {
+    content: "\e903";
+}
+.icon-mp3-fill:before {
+    content: "\e904";
+}
+.icon-mp3-outline:before {
+    content: "\e905";
+}
+.icon-checkbox-checked:before {
+    content: "\e90a";
+}
+.icon-adult:before {
+    content: "\e908";
+}
+.icon-education:before {
+    content: "\e909";
+}
+.icon-software:before {
+    content: "\e907";
+}
+.icon-movie:before {
+    content: "\e906";
 }
